test/Fail/Issue6173/Import.agda
-- Module header missing by intention

-- Import some module that is error-free
import A.B.M
